fix alignment of list and size of use visable

--- a/src/assets/styles/cmps/SongList.scss
+++ b/src/assets/styles/cmps/SongList.scss
@@ -45,11 +45,12 @@
     font-weight: bold;
     // border-bottom: 1px solid #888;
     padding-bottom: 10px;
-    width: 99%;
+    width: 100%;
 
     .song-duration {
       display: flex;
-      justify-content: flex-end;
+      justify-content: end;
+      margin-right: 10px;
     }
   }
 
